upload swagger
